[Transform] Remove duplicate checkpoint audits
Transform Checkpoints have a chance to log duplicate audits or drop
iterations.  The volatile counters can be read and incremented in
multiple threads, potentially storing the same value back into memory.

Replacing volatile counters with a single Atomic counter, which counts
down the iterations until it reaches zero, then updates the counter to
the next audited checkpoint.

Closes #105106